--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,9 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=product_maagement'
+      - 'POSTGRES_PASSWORD=gajah'
+      - 'POSTGRES_USER=postgres'
     ports:
       - '5432'
   redis:
