--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.show_sql=true
 # Redis Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.assignment.product_management=DEBUG
